testes das telas de vitória e derrota

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </h1>
     </div>
     
-    <div id="vitoria" class="container end-screen center">
+    <div id="vitoria" class="container end-screen none">
         <h3>Você Ganhou!</h3>
         <button onclick="novoJogo()"> Jogar Novamente </button>
     </div>
