configuração do placar e adição das imagens do jogo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <h1>
             JoKenPo
         </h1>
+
+        <div class="bloco">
+            <div class="label bg-green">EU</div>
+            <div class="label bg-red">PC</div>
+            <div id="contador" class="placar">0:0</div>
+        </div>
     </div>
     
     <div id="vitoria" class="container end-screen none">
