testes tela do jogo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
             <div id="contador" class="placar">0:0</div>
         </div>
     </div>
+
+    <div class="bloco bg-grey selected-image">
+         <div id="eu">
+            <img src="pedra.png">
+         </div>
+         <div id="pc" class="reverse">
+            <img src="pedra.png">
+         </div>
+    </div>
+
+    <h2>Escolha seu movimento</h2>
     
     <div id="vitoria" class="container end-screen none">
         <h3>Você Ganhou!</h3>
