--- a/index.html
+++ b/index.html
@@ -8,34 +8,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="game" class="container">
+    <div class="container">
         <h1>
             JoKenPo
         </h1>
-
         <div class="bloco">
             <div class="label bg-green">EU</div>
             <div class="label bg-red">PC</div>
-            <div id="contador" class="placar">0:0</div>
+            <div id="contador" class="placar">
+                0:0
+            </div>
+        </div>
+        <div class="bloco bg-grey selected-image">
+            <div id="eu">
+                <img src="pedra.png">
+            </div>
+            <div id="pc" class="reverse">
+
+            </div>
+        </div>
+        <h2>Escolha seu movimento</h2>
+        <div class="buttons">
+            <label>
+                <input type="radio" onclick="reset()" name="play" value="pedra" checked>
+                <button class="btn"><img src="pedra.png"></button>
+            </label>
+            <label>
+                <input type="radio" onclick="reset()" name="play" value="papel">
+                <button class="btn"><img src="papel.png"></button>
+            </label>
+            <label>
+                <input type="radio" onclick="reset()" name="play" value="tesoura">
+                <button class="btn"><img src="tesoura.png"></button>
+            </label>
+        </div>
+        <div class="bloco">
+            <button id="jogar" class="btn-jogar">Jogar</button>
         </div>
     </div>
-
-    <div class="bloco bg-grey selected-image">
-         <div id="eu">
-            <img src="pedra.png">
-         </div>
-         <div id="pc" class="reverse">
-            <img src="pedra.png">
-         </div>
-    </div>
-
-    <h2>Escolha seu movimento</h2>
-    
     <div id="vitoria" class="container end-screen none">
         <h3>Você Ganhou!</h3>
         <button onclick="novoJogo()"> Jogar Novamente </button>
     </div>
-
     <div id="derrota" class="container end-screen none">
         <h3>Você Perdeu!</h3>
         <button onclick="novoJogo()"> Jogar Novamente </button>
