--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
         <h3>Você Perdeu!</h3>
         <button onclick="novoJogo()"> Jogar Novamente </button>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
