pastas para as imagens e sons criada

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="bloco bg-grey selected-image">
             <div id="eu">
-                <img src="pedra.png">
+                <img src="imagens/pedra.png">
             </div>
             <div id="pc" class="reverse">
 
@@ -31,15 +31,15 @@
         <div class="buttons">
             <label>
                 <input type="radio" onclick="reset()" name="play" value="pedra" checked>
-                <button class="btn"><img src="pedra.png"></button>
+                <button class="btn"><img src="imagens/pedra.png"></button>
             </label>
             <label>
                 <input type="radio" onclick="reset()" name="play" value="papel">
-                <button class="btn"><img src="papel.png"></button>
+                <button class="btn"><img src="imagens/papel.png"></button>
             </label>
             <label>
                 <input type="radio" onclick="reset()" name="play" value="tesoura">
-                <button class="btn"><img src="tesoura.png"></button>
+                <button class="btn"><img src="imagens/tesoura.png"></button>
             </label>
         </div>
         <div class="bloco">
